# GenomeInsight

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml
.github/workflows/: bundle-release.yml  ci.yml  nightly.yml  release.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_dbsnp_merges.py  003_hla_proxy_lookup.py  004_custom_panels.py  005_overlay_configs.py  006_reannotation_watched_columns.py  009_add_individuals_table.py
backend/: __init__.py  auth.py  config.py  disclaimers.py  installer.py  logging_config.py  main.py
bundles/: manifest.json
docs/: ANCESTRY_MODULE.md  annotation-validation-strategy.md  bundle-release-runbook.md  expansion-second-wave-plan.md  lai-bundle-release-runbook.md  multi-source-merging.md  security-audit-report.md  setup-guide.md  setup-update-plan.md  setup-update-steps.md  test-suite-audit-and-ci-tiering.md  test-suite-debt-remediation-plan.md  usage-guide.md
frontend/: index.html  package-lock.json  package.json  vitest.config.ts
launchd/: com.genomeinsight.api.plist  com.genomeinsight.huey.plist
scripts/: backfill_individuals.py  benchmark.py  build_ancestrydna_site_list.py  build_gnomad_bundle.py  build_haplogroup_bundle.py  build_union_catalog.py  build_vep_bundle.py  extract_vep_bundle_rsids.py  generate_vep_input.py  regenerate_fixtures.py
systemd/: genomeinsight-api.service  genomeinsight-huey.service
tests/: conftest.py
(+649 files in other folders)
